Fixed z-index for theme preview

--- a/packages/documentation/src/components/Customization/ThemeBuilder/Preview.scss
+++ b/packages/documentation/src/components/Customization/ThemeBuilder/Preview.scss
@@ -23,5 +23,6 @@
   .rmd-sheet,
   .rmd-overlay {
     position: absolute;
+    z-index: 1;
   }
 }
